# trie-match

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: input_html_elements.txt  match.rs
figures/: graph.dot
src/: lib.rs  trie.rs
tests/: tests.rs
