[package]
name = "trie-match"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote = "1"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }  # Apache-2.0 or MIT

[[bench]]
name = "match"
harness = false
