[package]
name = "trie-match"
version = "0.1.1"
edition = "2021"
rust-version = "1.60"
authors = [
    "Koichi Akabe <vbkaisetsu@gmail.com>",
]
description = "Fast match macro"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/trie-match"
repository = "https://github.com/daac-tools/trie-match"
readme = "README.md"
keywords = ["match", "text", "double-array", "macro"]
categories = ["text-processing", "algorithms", "data-structures", "no-std::no-alloc"]
exclude = [".*"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] } # MIT or Apache-2.0
proc-macro2 = "1.0" # MIT or Apache-2.0
quote = "1.0" # MIT or Apache-2.0

[features]
# Nightly only
cfg_attribute = []

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] } # MIT or Apache-2.0

[[bench]]
name = "match"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
